Closed
Bug 308439
Opened 20 years ago
Closed 20 years ago
XForms Submits will not work with ASP.NET V2 web services
Categories
(Core Graveyard :: XForms, defect)
Core Graveyard
XForms
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: peter.nunn, Assigned: aaronr)
Details
(Keywords: fixed1.8)
Attachments
(2 files, 1 obsolete file)
|
1.15 KB,
patch
|
allan
:
review+
doronr
:
review+
|
Details | Diff | Splinter Review |
|
1.54 KB,
patch
|
smaug
:
review+
aaronr
:
review+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/4.0 (compatible; MSIE 6.0; Windows NT 5.1; formsPlayer 1.3; .NET CLR 2.0.50215; .NET CLR 1.1.4322)
Build Identifier:
Minor issues with submission in xforms.
Cannot set mediatype to application/soap+xml as the submission looks for an
attribute called mediaType
Cannot parse returned media type of application/soap+xml
Reproducible: Always
| Reporter | ||
Comment 1•20 years ago
|
||
Allows the XML parser to handle soap returns when interfacing to web services
| Reporter | ||
Comment 2•20 years ago
|
||
Incorrect spelling of mediatype. Will always default to application/xml if the
xforms spec spelling of mediatype is used
Updated•20 years ago
|
Attachment #196021 -
Flags: review?(allan)
Updated•20 years ago
|
Attachment #196021 -
Flags: review?(doronr)
Attachment #196021 -
Flags: review?(allan)
Attachment #196021 -
Flags: review+
Comment 3•20 years ago
|
||
(In reply to comment #2)
> Created an attachment (id=196021) [edit]
> patch to allow for mediatype
>
> Incorrect spelling of mediatype. Will always default to application/xml if the
> xforms spec spelling of mediatype is used
Absolutely correct. "mediaType" is wrong.
Status: UNCONFIRMED → NEW
Ever confirmed: true
Comment 4•20 years ago
|
||
(In reply to comment #1)
> Created an attachment (id=196020) [edit]
> Fix for nsDOMParser to allow application/soap+xml
>
> Allows the XML parser to handle soap returns when interfacing to web services
It seems reasonable to me to let the DOMParser parse this too. I'm moving the
bug to Core/XML for that (the XForms part is a simple fix).
Component: XForms → XML
Hardware: PC → All
Updated•20 years ago
|
Attachment #196020 -
Flags: review?(bugmail)
Updated•20 years ago
|
Attachment #196021 -
Flags: review?(doronr) → review+
Comment 5•20 years ago
|
||
Checked attachment 196021 [details] [diff] [review] in to trunk
Updated•20 years ago
|
Whiteboard: xf-to-branch
Comment on attachment 196020 [details] [diff] [review]
Fix for nsDOMParser to allow application/soap+xml
Shouldn't you add this mimetype to the list of mimetypes treated as xml by the
content sinks too?
Comment 7•20 years ago
|
||
(In reply to comment #6)
> (From update of attachment 196020 [details] [diff] [review] [edit])
> Shouldn't you add this mimetype to the list of mimetypes treated as xml by the
> content sinks too?
I talked with peterv yesterday, and the resolution is that we force-feed
"application/xml" as the content type to the DOMParser. That should work.
So I'm taking the bug back to XForms-land.
Component: XML → XForms
Updated•20 years ago
|
Attachment #196020 -
Flags: review?(bugmail)
Comment 8•20 years ago
|
||
Here's a simple fix that just sets the content type to "application/xml". If
it's not XML, the parser bails and we'll catch it.
Attachment #196020 -
Attachment is obsolete: true
Attachment #198286 -
Flags: review?(smaug)
Updated•20 years ago
|
Attachment #198286 -
Flags: review?(smaug)
Attachment #198286 -
Flags: review?(doronr)
Attachment #198286 -
Flags: review+
Comment 9•20 years ago
|
||
Comment on attachment 198286 [details] [diff] [review]
Patch
Changing review request.
Doron is still on vacation.
Attachment #198286 -
Flags: review?(doronr) → review?(aaronr)
Attachment #198286 -
Flags: review?(aaronr) → review+
Comment 10•20 years ago
|
||
(In reply to comment #8)
> Created an attachment (id=198286) [edit]
> Patch
>
> Here's a simple fix that just sets the content type to "application/xml". If
> it's not XML, the parser bails and we'll catch it.
Checked in to trunk.
Status: NEW → ASSIGNED
Comment 11•20 years ago
|
||
a checkin comment says this also landed on the 1.8 branch. If that's the case,
can you please add the "fixed1.8" keyword? thanks.
Comment 12•20 years ago
|
||
(In reply to comment #11)
> a checkin comment says this also landed on the 1.8 branch. If that's the case,
> can you please add the "fixed1.8" keyword? thanks.
Only attachment 196021 [details] [diff] [review] is on branch. Attachment 198286 [details] [diff] is still waiting.
Comment 13•20 years ago
|
||
checked into branch.
Status: ASSIGNED → RESOLVED
Closed: 20 years ago
Keywords: fixed1.8
Resolution: --- → FIXED
Whiteboard: xf-to-branch
Updated•10 years ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•