[XForms] Fix type in mediatype attribute for submission. Bug 308439, r=me+doronr, patch by Peter Nunn